--- a/map.html
+++ b/map.html
@@ -77,7 +77,7 @@
         /* Define the animation once */
         @keyframes pulse {
             0% {
-                opacity: 0.85;
+                opacity: 0.25;
             }
 
             50% {
@@ -85,7 +85,7 @@
             }
 
             100% {
-                opacity: 0.85;
+                opacity: 0.25;
             }
         }
 
@@ -116,7 +116,7 @@
     </div>
 
     <script>
-        const version = '1.0.34';
+        const version = '1.0.35';
         const SERVER_URL = 'http://localhost:8080';
         //const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-to-mapURL.json';
@@ -266,6 +266,7 @@
                     // Add danger class if label contains "DANGER!"
                     if (poi.label?.toUpperCase().includes('DANGER!')) {
                         circle.classList.add('poi-danger');
+                        circle.classList.add('poi-fast');  // faster pulse
                     }
 
                     // Tooltip text
