--- a/map.html
+++ b/map.html
@@ -53,7 +53,8 @@
 
             .poi:hover {
                 animation-play-state: paused; /* Pause animation on hover */
-                opacity: 1; /* Still full opacity on hover */
+                opacity: 0; /* No opacity on hover.  Let my people see! */
+                /*opacity: 1;*/ /* Still full opacity on hover */
                 filter: drop-shadow(0 0 4px cyan); /* Glow effect */
             }
 
@@ -63,7 +64,8 @@
 
             .poi-danger:hover {
                 animation-play-state: paused; /* Pause animation on hover */
-                fill: #ff4444;
+                /*fill: #ff4444;*/
+                opacity: 0; /* No opacity on hover.  Let my people see! */
                 filter: drop-shadow(0 0 6px red); /* Stronger glow effect */
             }
 
@@ -117,7 +119,7 @@
     </div>
 
     <script>
-        const version = '1.0.40';
+        const version = '1.0.41';
         const SERVER_URL = 'http://localhost:8080';
         //const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-to-mapURL.json';
