--- a/map.html
+++ b/map.html
@@ -52,10 +52,9 @@
 
             /* On hover: Force low opacity + pause animation + glow */
             .poi:hover {
-                animation-play-state: paused;
-                opacity: 0.35;
-                transition: opacity 0.4s ease-out; /* Smooth fade over 0.4 seconds */
-                filter: drop-shadow(0 0 4px cyan);
+                animation-play-state: paused; /* Stop the pulse */
+                opacity: 0.35 !important; /* Force quite transparent (adjust 0.35 to taste: 0.2–0.4 is good) */
+                filter: drop-shadow(0 0 4px cyan); /* Optional glow */
             }
 
         /* Danger version – same idea */
@@ -95,7 +94,7 @@
     </div>
 
     <script>
-        const version = '1.0.42';
+        const version = '1.0.43';
         const SERVER_URL = 'http://localhost:8080';
         //const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-to-mapURL.json';
