--- a/test_affine.html
+++ b/test_affine.html
@@ -8,7 +8,7 @@
     <h1>Affine Position Calculator Test</h1>
     <p>Usage: Append ?scene=RuralRegion&x=172.53&z=2500.19 to the URL</p>
 
-    <p>
+    <pre>
         This should use the affine for RuralRegion to compute the map position for the given game coordinates.
         Expected output:
         Region: RuralRegion
@@ -27,7 +27,7 @@
         "svgY": 119.23147,
         "label": "Exit to Timberwolf Mountain"
         }
-    </p>
+    </pre>
 
     <script>
         // Helper: Get URL query parameter
