--- a/test_affine.html
+++ b/test_affine.html
@@ -76,7 +76,7 @@
                 // Optional: Display on page
                 document.body.innerHTML += `
                         <p><strong>data.region:</strong> ${data.region}</p>
-                        <p>strong>Affine Data Loaded Successfully</strong></p>
+                        <p><strong>Affine Data Loaded Successfully</strong></p>
                         <p><strong>m.A, m.B, m.Tx:</strong> ${m.A}, ${m.B}, ${m.Tx}</p>
                         <p><strong>m.C, m.D, m.Ty:</strong> ${m.C}, ${m.D}, ${m.Ty}</p>
                         <p><strong>scene, gameX, gameZ:</strong> ${scene}, ${gameX}, z=${gameZ}</p>
