--- a/test_affine.html
+++ b/test_affine.html
@@ -62,8 +62,8 @@
                         <p><strong>Region:</strong> ${data.region}</p>
                         <p><strong>Generated At:</strong> ${data.generatedAt}</p>
                         <p><strong>Calibration Points:</strong> ${data.calibPointCount}</p>
-                        <p><strong>LayerOffsetX:</strong> ${data.LayerOffsetX}</p>
-                        <p><strong>LayerOffsetY:</strong> ${data.LayerOffsetY}</p>
+                        <p><strong>LayerOffsetX:</strong> ${data.layerOffsetX}</p>
+                        <p><strong>LayerOffsetY:</strong> ${data.layerOffsetY}</p>
                         <p><strong>Requested Game Position:</strong> Scene=${scene}, x=${gameX}, z=${gameZ}</p>
                         <p><strong>Calculated Map Position (px):</strong> ${pxX.toFixed(2)}, ${pxY.toFixed(2)}</p>
                         <p><strong>Expected (from POI JSON):</strong> 412.57425, 338.77673</p>
