Updated usage exampl

--- a/test_affine2.html
+++ b/test_affine2.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <h1>Affine Calibration Test for POI Positions - Version 0.0.2</h1>
-    <p>Usage: Append ?scene=RuralRegion&difficulty=hard to the URL</p>
+    <p>Usage: Append ?scene=[Region Name] to the URL</p>
     <p id="loading">Loading affine and POI data...</p>
 
     <div id="affine-summary" style="display:none;">
