Added MountainPassCaveA region.  This is the cave system with entrances A, B, C, D in Sundered Pass. Note that the cave map is a small inset in the lower right corner of the MountainPassRegion map. So we are just using that map again with different POI markers on it.
Updated version on test_affine2.html to "1.0.3 - 01/11/2026"

--- a/test_affine2.html
+++ b/test_affine2.html
@@ -71,7 +71,7 @@
     </style>
 </head>
 <body>
-    <h1>Affine Calibration Test for POI Positions - Version 0.0.2</h1>
+    <h1>Affine Calibration Test for POI Positions - Version 0.0.3 - 01/11/2026</h1>
     <p>Usage: Append ?scene=[Region Name] to the URL</p>
     <p id="loading">Loading affine and POI data...</p>
 
