--- a/map.html
+++ b/map.html
@@ -106,7 +106,15 @@
     </div>
 
     <script>
-        const version = '1.0.49';
+
+        // Todo:
+        // 1. Can we adjust the scale, translateX, translateY to present a subset of the map?  Background info is that some scenes are
+        // all represented in a single large map image.
+        // e.g. Dam, DamRiverTransitionZoneB, and DamTransitionZone scenes are all on a single map.
+        // and it would be nice to zoom in on the actual playable area.
+        // We would need to add the scale, translateX, translateY values to the regions-to-mapURL.json file.
+
+        const version = '1.0.50';
         const SERVER_URL = 'http://localhost:8080';
         //const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-to-mapURL.json';
@@ -175,27 +183,27 @@
         }
 
 
-                // This is where you can hardcode for testing:
-                //currentScene = 'LakeRegion';
-                //currentScene = 'MiningRegion';
-                //currentScene = 'RavineTransitionZone';
-                //currentScene = 'RuralRegion';
-                //currentDifficulty = 'easy';
-                //currentDifficulty = 'hard';
+        // This is where you can hardcode for testing:
+        //currentScene = 'LakeRegion';
+        //currentScene = 'MiningRegion';
+        //currentScene = 'RavineTransitionZone';
+        //currentScene = 'RuralRegion';
+        //currentDifficulty = 'easy';
+        //currentDifficulty = 'hard';
 
-                //console.log(`Version ${version}: Overridden (debug) scene (difficulty)=${currentScene} (${currentDifficulty})`);
+        //console.log(`Version ${version}: Overridden (debug) scene (difficulty)=${currentScene} (${currentDifficulty})`);
 
-                // Prompt user for scene/difficulty override for testing
-                //const userInputScene = prompt(`Current scene detected: ${currentScene}.\nPress OK to use this scene, or enter a different scene name for testing:`, currentScene);
-                //if (userInputScene && userInputScene.trim() !== '') {
-                //    currentScene = userInputScene.trim();
-                //}
-                //if (!currentScene) throw new Error('No scene name received');
+        // Prompt user for scene/difficulty override for testing
+        //const userInputScene = prompt(`Current scene detected: ${currentScene}.\nPress OK to use this scene, or enter a different scene name for testing:`, currentScene);
+        //if (userInputScene && userInputScene.trim() !== '') {
+        //    currentScene = userInputScene.trim();
+        //}
+        //if (!currentScene) throw new Error('No scene name received');
 
-                //const userInputDifficulty = prompt(`Current difficulty detected: ${currentDifficulty}.\nPress OK to use this difficulty, or enter a different difficulty for testing:`, currentDifficulty);
-                //if (userInputDifficulty && userInputDifficulty.trim() !== '') {
-                //    currentDifficulty = userInputDifficulty.trim();
-                //}
+        //const userInputDifficulty = prompt(`Current difficulty detected: ${currentDifficulty}.\nPress OK to use this difficulty, or enter a different difficulty for testing:`, currentDifficulty);
+        //if (userInputDifficulty && userInputDifficulty.trim() !== '') {
+        //    currentDifficulty = userInputDifficulty.trim();
+        //}
 
 
         // === Load map image + POIs ===
