--- a/map.html
+++ b/map.html
@@ -114,7 +114,7 @@
         // and it would be nice to zoom in on the actual playable area.
         // We would need to add the scale, translateX, translateY values to the regions-to-mapURL.json file.
 
-        const version = '1.0.50';
+        const version = '1.0.51';
         const SERVER_URL = 'http://localhost:8080';
         //const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
         const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/master/regions-to-mapURL.json';
@@ -349,6 +349,8 @@
         // Update transform
         function updateTransform() {
             svg.style.transform = `translate(${translateX}px, ${translateY}px) scale(${scale})`;
+            document.getElementById('status').textContent =
+                `${version}: ${currentScene} (${currentDifficulty}) translate(${translateX}px, ${translateY}px) scale(${scale})`;
         }
 
         // Mouse wheel zoom
