--- a/map.html
+++ b/map.html
@@ -90,7 +90,8 @@
             border-radius: 6px;
             font-size: 14px;
             z-index: 10;
-            max-width: 400px;
+            /*max-width: 400px;*/
+            max-width: 500px;
             pointer-events: none;
         }
     </style>
